Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.5.5 (??/??/????):
	Finch:
	* Allow rebinding keys to change the focused widget (details in the
	  man-page, look for GntBox::binding)

version 2.5.4 (01/12/2009):
	libpurple:
	* Fix a connection timeout with empty Gadu-Gady buddy lists. (Martin
	  Rosinski)
	* Don't ignore namespace information when parsing XMPP data. (Michal
	  Witkowski)
	* Fix a crash that occurred when retrieving certain Offline Messages
	  on MSN.
	* Extended purple-url-handler to handle "gtalk" URI's. (Paul Aurich)
	* Fix the hang on exit in Network Location Awareness for Windows XP
	  and Windows Vista. (Paul Aurich)

	MSN:
	* Change Contact Server to temporarily fix connection problems.
	  (Thanks to Youness Alaoui)

	XMPP:
	* Support for XEP-0191 blocking.  (Vijay Raghunathan)
	* Don't put SASL PLAIN or IQ Auth passwords in debug logs. (Paul Aurich)
	* Fix removal of avatars (both PEP and vCard), we weren't removing
	  them correctly before. (Paul Aurich)

	Pidgin:
	* Fix a crash in the Add Account dialog when changing protocols under
	  certain circumstances.

	Finch:
	* Redirect stderr outputs to the debug window.
	* Fix rebinding actions with the arrow-keys and tab.

version 2.5.3 (12/20/2008):
	libpurple:
	* The Buddy State Notification plugin no longer prints duplicate
	  notifications when the same buddy is in multiple groups. (Florian
	  Quèze)
	* The Buddy State Notification plugin no longer turns JID's, MSN
	  Passport ID's, etc. into links. (Florian Quèze)
	* purple-remote now has a "getstatusmessage" command to retrieve
	  the text of the current status message.
	* Various fixes to the nullprpl. (Paul Aurich)
	* Fix a crash when accessing the roomlist for an account that's not
	  connected. (Paul Aurich)
	* Fix a crash in purple_accounts_delete that happens when this
	  function is called before the buddy list is initialized.
	  (Florian Quèze)